# fade-extension

./: .gitignore  CMakeLists.txt
.github/workflows/: MainDistributionPipeline.yml
scripts/: intel_prep.py  scorpion.py  scorpion_local.py  tpch_test.py
src/: fade_extension.cpp
src/fade/: fade_node.cpp  fade_reader.cpp  fade_sparse.cpp
src/include/: fade_extension.hpp
src/include/fade/: fade_get_predicate.hpp  fade_node.hpp  fade_reader.hpp
src/include/lineage/: lineage_init.hpp  lineage_meta.hpp  lineage_reader.hpp  logical_lineage_operator.hpp  physical_caching_operator.hpp  physical_lineage_operator.hpp
src/lineage/: lineage_init.cpp  lineage_meta.cpp  lineage_reader.cpp  logical_lineage_operator.cpp  physical_caching_operator.cpp  physical_lineage_operator.cpp
test/sql/: dummy_extension.test
